# habit-vault

./: README.md  index.html  initial_prompt.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: checks.rs  db.rs  habits.rs  mod.rs
src/components/: AddHabitForm.tsx  AutostartToggle.tsx  LanguageSwitcher.tsx  SetupScreen.tsx  WeekNav.tsx  WeeklyTracker.tsx
src/hooks/: useHabits.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json
src/types/: index.ts
